bynkc/tests/fixtures/positive/119_workers_emits_wrangler_toml/src/billing.bynk
context billing

service ping {
  on call() -> Effect[Result[(), ()]] {
    Ok(())
  }
}
