bynkc/tests/fixtures/negative/130_export_capability_not_provided/src/platform/np.bynk
context platform.np

exports capability { Clock }

capability Clock {
  fn now() -> Effect[Int]
}
